fix: add padding to label in DateMenu styles for better alignment

--- a/styles/datemenu.scss
+++ b/styles/datemenu.scss
@@ -37,6 +37,10 @@
         background-color: theme.$background;
         border-width: 2px;
 
+        label {
+          padding-left: 5px;
+        }
+
         &:hover {
           background-color: theme.$background-alt;
 
